# competitive-programming-unipi

./: .gitignore  Cargo.toml  readme.md
src/: 00_util.rs  01_kadane.rs  02_kadane.rs  02_recursive_bin_search  03_recursive_bin_search.rs  04_trees.rs  05_trees_HANDSON.rs  11_13_segment_trees_HANDSON.rs  99_DP_HANDSON.rs
testsets/handson3-course/: input3.txt
