[package]
name = "competitive-programming-unipi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "util"
path = "src/00_util.rs"

[[bin]]
name = "kadane"
path = "src/01_kadane.rs"

[[bin]]
name = "recbins"
path = "src/02_recursive_bin_search.rs"