[package]
name = "competitive-programming-unipi"
version = "0.1.0"
edition = "2021"
authors = ["Emanuele Buonaccorsi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.3"


[[bin]]
name = "util"
path = "src/00_util.rs"

[[bin]]
name = "kadane"
path = "src/02_kadane.rs"

[[bin]]
name = "recbins"
path = "src/03_recursive_bin_search.rs"

[[bin]]
name = "trees"
path = "src/04_trees.rs"

[[bin]]
name = "trees_handson"
path = "src/05_trees_HANDSON.rs"


[[bin]]
name = "segment_trees_handson"
path = "src/11_13_segment_trees_HANDSON.rs"

[[bin]]
name = "dp_handson"
path = "src/99_DP_HANDSON.rs"